fix problem of image too big in the mobile view

--- a/static/css/OLT-web-interface.css
+++ b/static/css/OLT-web-interface.css
@@ -83,3 +83,7 @@ div.centering-container {
 }
 
 body { padding-bottom: 70px; }
+
+img {
+     max-width: 100%;
+}
